# gpointing-device-settings

./: .gitignore  MAINTAINERS  Makefile.am  NEWS  TODO  autogen.sh  configure.ac  gpointing-device-settings.doap  libgpointing-device-settings.pc.in
data/: Makefile.am  gnome-settings-daemon.schemas.in  gpointing-device-settings.desktop.in.in  gpointing-device-settings_gnome_settings_daemon.schemas.in  main-window.ui  mouse.ui  mouse.ui.in  pointingstick.ui  touchpad.ui  touchpad.ui.in  trackpoint.ui  trackpoint.ui.in
doc/: Makefile.am
modules/: Makefile.am  gpds-mouse-ui.c  gpds-pointingstick-ui.c  gpds-touchpad-definitions.h  gpds-touchpad-gconf.h  gpds-touchpad-ui.c  gpds-touchpad-xinput.c  gpds-touchpad-xinput.h  gpds-trackpoint-definitions.h  gpds-trackpoint-ui.c  gpds-trackpoint-xinput.c  gpds-trackpoint-xinput.h  gsd-touchpad-manager.c  gsd-touchpad-manager.h  gsd-touchpad-plugin.c  gsd-trackpoint-manager.c  gsd-trackpoint-manager.h  gsd-trackpoint-plugin.c  touchpad.gnome-settings-plugin.in
modules/common/: Makefile.am  gpds-mouse-definitions.h  gpds-mouse-xinput.c  gpds-mouse-xinput.h  gpds-pointingstick-definitions.h  gpds-pointingstick-xinput.c  gpds-pointingstick-xinput.h  gpds-touchpad-definitions.h  gpds-touchpad-xinput.c  gpds-touchpad-xinput.h  gpds-trackpoint-definitions.h  gpds-trackpoint-xinput.c  gpds-trackpoint-xinput.h
modules/gnome-settings-daemon-plugins/: Makefile.am  gsd-mouse-extension-manager.c  gsd-mouse-extension-manager.h  gsd-mouse-extension-plugin.c  gsd-pointing-device-manager.c  gsd-pointing-device-manager.h  gsd-pointing-device-plugin.c  gsd-pointingstick-manager.c  gsd-pointingstick-manager.h  gsd-touchpad-manager.c  gsd-touchpad-manager.h  gsd-touchpad-plugin.c  gsd-trackpoint-manager.c  gsd-trackpoint-plugin.c  mouse-extension.gnome-settings-plugin.in  pointing-device.gnome-settings-plugin.in  trackpoint.gnome-settings-plugin.in
po/: LINGUAS  POTFILES.in  POTFILES.skip  bs.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  et.po  fr.po  gl.po  hu.po  id.po  ja.po  ko.po  nb.po  pa.po  pt.po  pt_BR.po  ro.po  ru.po  sl.po  sr.po  sr@latin.po  sv.po  zh_CN.po
src/: Makefile.am  gpds-event-feedback.c  gpds-event-feedback.h  gpds-gconf.c  gpds-gconf.h  gpds-grayed-desktop.c  gpds-grayed-desktop.h  gpds-main-window.c  gpds-main-window.h  gpds-module-impl.h  gpds-module.c  gpds-module.h  gpds-trackpoint-ui.c  gpds-trackpoint-ui.h  gpds-ui.c  gpds-ui.h  gpds-utils.c  gpds-utils.h  gpds-xinput-pointer-info.c  gpds-xinput-pointer-info.h  gpds-xinput-ui.c  gpds-xinput-ui.h  gpds-xinput-utils.c  gpds-xinput-utils.h  gpds-xinput.c  gpds-xinput.h  gpointing-device-settings.c  gpointing-device-settings.h  gtrackpoint-ui.c  gtrackpoint-ui.h  gxinput.c  gxinput.h
test/: Makefile.am  gpds-test-suite.c  gpointing-device-settings-test-suite.c  run-test.sh  test-gconf.c  test-module.c  test-ui-widget.c  test-ui.c  test-utils.c  test-xinput-pointer-info.c  test-xinput-utils.c  test-xinput.c
